<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Description -->
    <TextView
        android:id="@+id/text_content_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_backstack_instruction"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_margin="5dp" />

    <!-- Input Label -->
    <LinearLayout
        android:id="@+id/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/text_content_info"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_next_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_backstack_input_label"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <!-- empty view -->
        <View
            android:id="@+id/empty_input_view"
            android:layout_width="8dp"
            android:layout_height="8dp"/>

        <!-- Input Field -->
        <EditText
            android:id="@+id/edit_next_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/demo_backstack_et_hint"
            android:textColorHint="@color/gray"
            android:inputType="textCapCharacters"
            android:textColor="@color/gray"/>

    </LinearLayout>


    <!-- Show Task ID -->
    <TextView
        android:id="@+id/text_task_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_backstack_show_task_id"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/input_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp" />

    <!-- Show Activity instance Info -->
    <TextView
        android:id="@+id/text_act_ins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/demo_backstack_show_act_info"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/text_task_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="5dp" />

    <!-- Scrollable Task Info -->
    <ScrollView
        android:id="@+id/scroll_task_info"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/text_act_ins"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_region"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/text_task_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Task Info\nLine 1\nLine 2\nLine 3..."
            android:textSize="16sp"
            android:textColor="#333333"
            android:background="@drawable/bg_info_card"
            android:padding="12dp" />
    </ScrollView>

    <!-- Button regin -->
    <LinearLayout
        android:id="@+id/button_region"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/scroll_task_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="RtlHardcoded">
        <!-- Config intent flag Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_intent_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/demo_backstack_config_btn"
            android:gravity="center"
            android:onClick="onConfigFlag"/>

        <!-- empty view -->
        <View
            android:id="@+id/empty_button_view"
            android:layout_width="8dp"
            android:layout_height="8dp"/>

        <!-- Next Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/demo_backstack_next_btn"
            android:onClick="onNavigateToNextActivity"/>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
